# face-upscaling-and-seamless-embedding

./: .gitignore  LICENSE  README.md  TEMPORAL_FACE_PROCESSING.md  VIDEO_SUPPORT.md  __init__.py  fuse_nodes.py  fuse_utils.py  pyproject.toml  requirements.txt
workflows/: FUSE_multi-aio_anime.json  FUSE_multi_anime.json  FUSE_single.json
